# claude-code-history-viewer

./: .coderabbit.yaml  .gitignore  ARCHITECTURE_V2.md  CHANGELOG.md  CLAUDE.md  CODEX_IMPLEMENTATION_PLAN.md  CODEX_INTEGRATION_GUIDE.md  CODEX_JSONL_PATTERNS.md  CODEX_UPDATE_SUMMARY.md  COMPARISON_AGENT_SESSIONS_CORRECTED.md  FORK_FRIENDLY_ARCHITECTURE.md  FUTURE_FEATURES_COMMAND_HISTORY.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MERGE_PLAN.md  PHASE_8_COMPLETE.md  PROMPT_ENHANCER.md  PROVIDER_COMPATIBILITY_ANALYSIS.md  QUICK_START_GUIDE.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.test.md  README.zh-CN.md  README.zh-TW.md  RELEASE.md  RELEASE_NOTES_1.6.0.md  TASK_TRACKER.md  TESTING.md  TYPE_FIX_STATUS.md  UNIVERSAL_REFACTORING_ANALYSIS.md  UPDATER_ANALYSIS_REPORT.md  clean.sh  eslint.config.js  fix_session.py  index.html  package-lock.json  (+7 more)
.claude/: settings.local.json
.github/workflows/: updater-release.yml
docs/: UPDATER.md
e2e/: README.md  pagination.spec.ts
e2e/fixtures/: mockClaudeData.ts  tauri.ts
e2e/tests/: app-initialization.spec.ts  navigation.spec.ts  ui-interactions.spec.ts
scripts/: capture-console.mjs  gentle-scroll.mjs  instrument-async.mjs  instrument-loop.mjs  instrument-renders.mjs  measure-scroll.mjs  migrate-colors.js  probe-dom.mjs  profile-cpu.mjs  release.cjs  run-with-pm.cjs  sync-version.cjs  updater-manifest.cjs
scripts/__tests__/: updater-manifest.test.ts
src/: App.css  App.tsx  i18n.config.ts  i18n.ts  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  http.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  lib.rs  main.rs  models.rs  utils.rs
src-tauri/src/commands/: aider.rs  antigravity.rs  claude_settings.rs  cline.rs  codex.rs  cursor.rs  cursor_writer.rs  edits.rs  feedback.rs  files.rs  forgecode.rs  fs_utils.rs  gemini.rs  mcp_presets.rs  metadata.rs  mod.rs  multi_provider.rs  opencode.rs  project.rs  rename.rs  resume.rs  search_match.rs  secure_update.rs  session.rs  session_delete.rs  session_test.rs  session_writer.rs  settings.rs  stats.rs  unified_presets.rs  update.rs  watcher.rs  wsl.rs
src-tauri/src/commands/adapters/: aider.rs  antigravity.rs  claude_code.rs  cline.rs  codex.rs  cursor.rs  forgecode.rs  gemini.rs  mod.rs  opencode.rs  provider_capabilities.rs
src-tauri/src/models/: files.rs  universal.rs
src-tauri/src/providers/: cursor.rs  gemini.rs  mod.rs
src-tauri/tests/: capabilities.test.ts  configImport.test.ts  tauriConfig.test.ts
src/adapters/: index.ts
src/components/: AdvancedTextDiff.tsx  AnalyticsDashboard.tsx  CaptureModeToolbar.tsx  CommandHistoryView.tsx  DebugConsole.tsx  EnhancedDiffViewer.tsx  ErrorBoundary.tsx  ExportControls.tsx  FeedbackModal.tsx  FileActivityFilters.tsx  FileActivityTable.tsx  FileContent.tsx  FileViewerModal.tsx  FilesView.tsx  FolderSelector.tsx  GitHubUpdateModal.tsx  HiddenBlocksIndicator.tsx  MessageViewControls.tsx  MessageViewer.tsx  ModelCostAnalyzer.tsx  NativeRenameDialog.tsx  NativeUpdateModal.tsx  ProjectContextMenu.tsx  ProjectListControls.tsx  ProjectTree.tsx  RawMessageView.tsx  ResizableSplitter.tsx  SearchView.tsx  SessionItem.tsx  SessionStatsCard.tsx  SimpleUpdateManager.tsx  SimpleUpdateModal.tsx  SimpleUpdateSettings.tsx  SmartJsonDisplay.tsx  SourceManager.tsx  SplashScreen.tsx  TokenStatsViewer.tsx  ToolIcon.tsx  UpToDateNotification.tsx  UpdateCheckingNotification.tsx  (+4 more)
src/config/: update.config.ts
src/constants/: colors.ts  layout.ts  providers.ts
src/hooks/: index.ts  useAnalytics.ts  useAnalyticsDashboard.ts  useCopyButton.tsx  useDarkMode.ts  useExternalLinks.ts  useFileWatcher.ts  useGitHubUpdater.ts  useMCPPresets.ts  useMCPServers.ts  useModals.ts  useNativeRename.ts  useNativeUpdater.ts  usePresets.ts  useResizablePanel.ts  useSearchState.ts  useSessionBoard.ts  useSessionMetadata.ts  useSmartUpdater.ts  useTheme.ts  (+6 more)
test-server/: README.md  latest.json  server.cjs
(+485 files in other folders)
