[package]
name = "claude-code-history-viewer"
version = "1.1.1"
description = "Claude Code 대화 기록을 탐색하고 분석하는 데스크톱 애플리케이션"
authors = ["JaeHyeok Lee"]
license = "MIT"
repository = "https://github.com/jhlee0409/claude-code-history-viewer"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "claude_code_history_viewer_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.1", features = [] }
tauri-plugin-log = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-os = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
walkdir = "2.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.0"
urlencoding = "2.1"
sha2 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.10.1"
